<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
>
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="329dp"
      android:layout_height="97dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="16dp">
    <TextView
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flower_name_label"
    />
    <EditText
        android:background="@drawable/back"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:inputType="textPersonName"
        android:text="@string/flower_name_placeholder"
        android:ems="10"
        android:id="@+id/flowerName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
    />
  </LinearLayout>
  <RelativeLayout
      android:id="@+id/spinnerLayout"
      android:layout_width="326dp"
      android:layout_height="142dp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="128dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintHorizontal_bias="0.482"
      app:layout_constraintEnd_toEndOf="parent"
  >
    <TextView
        android:paddingTop="15dp"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/color_spinner_label"
    />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
    />
  </RelativeLayout>
  <android.support.constraint.ConstraintLayout
      android:id="@+id/priceRangeLayout"
      android:layout_width="327dp"
      android:layout_height="157dp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="284dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintHorizontal_bias="0.488"
      app:layout_constraintEnd_toEndOf="parent"
  >
    <TextView
        android:paddingTop="15dp"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/price_range_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
    />
    <TextView
        android:paddingTop="15dp"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/priceSeekBarValue"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="164dp" android:layout_marginStart="164dp"/>
    <SeekBar
        android:id="@+id/priceSeekBar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="72dp"
        android:progress="100"
    />
  </android.support.constraint.ConstraintLayout>
  <Button
      android:text="@string/submit_button_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/okBtn"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="456dp"
  />
</android.support.constraint.ConstraintLayout>